--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip -r requirements.txt
+    - name: Test with python call for Version
+      run: |
+        python src/pg_dumper.py --version
+    - name: Test with python call for Help
+      run: |
+        python src/pg_dumper.py --help
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
