--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,12 +27,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Test with python call for Version
+      run: |
+        python src/pg_dumper.py --version
+    - name: Test with python call for Help
+      run: |
+        python src/pg_dumper.py --help
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with python call
-      run: |
-        python src/pg_dumper.py --version
