--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,4 +25,7 @@ jobs:
         python src/pg_dumper.py --help  
     - name: Analysing the code with pylint
       run: |
+        pwd
+        ls -ltr
+        echo $(git ls-files '*.py')
         pylint $(git ls-files '*.py')
