--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,10 +29,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with python call for Version
+    - name: Python call for pg_dumper with version
       run: |
         python src/pg_dumper.py --version
-    - name: Test with python call for Help
+    - name: Python call for pg_dumper with help
       run: |
         python src/pg_dumper.py --help
     - name: Lint with flake8
