--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 astroid==2.15.3
+click==8.1.3
 dill==0.3.6
 exceptiongroup==1.1.1
 flake8==6.0.0
+Flask==2.2.3
+importlib-metadata==6.6.0
 iniconfig==2.0.0
 isort==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lazy-object-proxy==1.9.0
+MarkupSafe==2.1.2
 mccabe==0.7.0
 packaging==23.1
 platformdirs==3.2.0
@@ -17,4 +23,6 @@ regex==2023.3.23
 tomli==2.0.1
 tomlkit==0.11.7
 typing-extensions==4.5.0
+Werkzeug==2.2.3
 wrapt==1.15.0
+zipp==3.15.0
