adjusted pipes to run pytest

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Python call for pg_dumper with help
       run: |
         python src/pg_dumper.py --help
+    - name: Test with pytest
+      run: |
+        pytest
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
