--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag pg_dumper:$(date +%s)
+    - name: List the available Docker images
+      run: docker images
+    - name: run the Docker image
+      run: docker run pg_dumper:$(date +%s) --help
