--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag pg_dumper:$(date +%s)
+      run: docker build . --file Dockerfile --tag pg_dumper:ci_build
     - name: List the available Docker images
       run: docker images
     - name: run the Docker image
-      run: docker run pg_dumper:$(date +%s) --help
+      run: docker run pg_dumper:ci_build --help
