--- a/.github/workflows/adept_pg_dump_assessor-python-compile.yml
+++ b/.github/workflows/adept_pg_dump_assessor-python-compile.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: adept_pg_dump_assessor-Python compile
 
 on:
   push:
