--- a/.github/workflows/adept_profiler-docker-image.yml
+++ b/.github/workflows/adept_profiler-docker-image.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Check python version
       run: python --version
     - name: adept_profiler -Build Docker image
-      run: docker build . --file src/pg_dump/Dockerfile --tag adept_profiler:ci_build-$(git log --pretty=format:'%h' -n 1)
+      run: docker build . --file src/profiler/Dockerfile --tag adept_profiler:ci_build-$(git log --pretty=format:'%h' -n 1)
     - name: List the available Docker images
       run: docker images
     - name: run the Docker image - show help
