--- a/.github/workflows/adept_pg_dump_assessor-docker-image.yml
+++ b/.github/workflows/adept_pg_dump_assessor-docker-image.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Check python version
       run: python --version
     - name: adept_pg_dump_assessor -Build Docker image
-      run: docker build . --file src/pg_dump/Dockerfile --tag adept_pg_dump_assessor:ci_build-$(git log --pretty=format:'%h' -n 1)
+      run: cd src/pg_dump && docker build . --file Dockerfile --tag adept_pg_dump_assessor:ci_build-$(git log --pretty=format:'%h' -n 1)
     - name: List the available Docker images
       run: docker images
     - name: run the Docker image - show help
@@ -32,4 +32,4 @@ jobs:
     environment: production
     steps:
       - name: deploy
-        run: docker build . --file src/pg_dump/Dockerfile --tag adept_pg_dump_assessor:ci_build-$(git log --pretty=format:'%h' -n 1)
+        run: cd src/pg_dump && docker build . --file Dockerfile --tag adept_pg_dump_assessor:ci_build-$(git log --pretty=format:'%h' -n 1)
