--- a/.github/workflows/adept_profiler-docker-image.yml
+++ b/.github/workflows/adept_profiler-docker-image.yml
@@ -19,6 +19,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Check python version
       run: python --version
     - name: adept_profiler -Build Docker image
