--- a/.github/workflows/adept_profiler-docker-image.yml
+++ b/.github/workflows/adept_profiler-docker-image.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Check python version
       run: python --version
     - name: adept_profiler -Build Docker image
-      run: cd src/profiler && docker build . --file Dockerfile --tag adept_profiler:latest --tag adept_profiler:$(python3 adept_profiler.py --version | awk '($1 == "adept_profiler") {print $2 += .01; exit}') --tag $(git describe --abbrev=0 --tags) --tag $(git rev-parse --short HEAD)
+      run: cd src/profiler && docker build . --file Dockerfile --tag adept_profiler:latest --tag adept_profiler:$(python3 adept_profiler.py --version | awk '($1 == "adept_profiler") {print $2 += .01; exit}') --tag $(git rev-parse --short HEAD)
     - name: List the available Docker images
       run: docker images
     - name: run the Docker image - show help
